[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/WhiteColor.shader" type="Shader" id=6]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Enemies/CrowStats.gd" type="Script" id=9]
[ext_resource path="res://assets/Enemies/Crow.png" type="Texture" id=10]
[ext_resource path="res://assets/Enemies/Crow.gd" type="Script" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="Animation" id=3]
resource_name = "Flight"
length = 0.5
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Landing"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=5]
resource_name = "StartFlashing"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "StopFlashing"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Takeoff"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="CircleShape2D" id=9]
radius = 9.0

[sub_resource type="CircleShape2D" id=10]
radius = 56.0089

[sub_resource type="CircleShape2D" id=11]
radius = 3.16228

[sub_resource type="CircleShape2D" id=12]
radius = 5.0

[node name="Crow" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 10 )
offset = Vector2( 0, -12 )
vframes = 2
hframes = 12
frame = 13

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CrowStats" parent="." instance=ExtResource( 4 )]
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flight = SubResource( 3 )
anims/Landing = SubResource( 4 )
anims/StartFlashing = SubResource( 5 )
anims/StopFlashing = SubResource( 6 )
anims/Takeoff = SubResource( 7 )

[node name="CrowTalkBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrowTalkBox"]
position = Vector2( 0, -14 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Tween" type="Tween" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 0, 0, 0.196078 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 7 )]
[connection signal="no_health" from="CrowStats" to="." method="_on_BatStats_no_health"]
[connection signal="area_entered" from="CrowTalkBox" to="." method="_on_BatTalkBox_area_entered"]
[connection signal="area_exited" from="CrowTalkBox" to="." method="_on_BatTalkBox_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
